--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^4.0.0",
-    "antd": "^4.19.5",
+    "antd": "^4.20.2",
     "axios": "^0.26.1",
+    "echarts": "^5.3.2",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.3.0",
     "qs": "^6.10.3",
@@ -17,6 +18,7 @@
     "react-quill": "^1.3.5",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "source-map-explorer": "^2.5.2",
     "tinymce": "^6.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -24,6 +26,7 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
